--- a/style.css
+++ b/style.css
@@ -18,6 +18,18 @@ main{
   margin: 30%; 
   margin-top: 5%;
   font-family: Arial, Helvetica, sans-serif;
+  height: auto; /* Setting height to auto-resize for content */
+}
+
+/* Adding fixed footer */
+footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color: red;
+  color: white;
+  text-align: center;
 }
 
 /* Headers alignment should be different (centered) */
